--- a/ansible/nimbus/files/nimbus.service
+++ b/ansible/nimbus/files/nimbus.service
@@ -3,8 +3,10 @@ Description=Nimbus Service
 
 [Service]
 ExecStart=/usr/bin/nimbus_run
+User=nimbus
+Group=nimbus
 Restart=always
 RuntimeMaxSec=21600
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
