--- a/ansible/nimbus/files/nimbus.service
+++ b/ansible/nimbus/files/nimbus.service
@@ -6,7 +6,8 @@ ExecStart=/usr/bin/nimbus_run
 User=nimbus
 Group=nimbus
 Restart=always
-# RuntimeMaxSec=21600
+RuntimeMaxSec=21600
+# RuntimeMaxSec=7200
 
 [Install]
 WantedBy=default.target
