set loglevel to crit for services syslog

--- a/ansible/eth2stats/files/eth2stats.service
+++ b/ansible/eth2stats/files/eth2stats.service
@@ -4,6 +4,7 @@ Description=ETH2 Stats Service
 [Service]
 ExecStart=/usr/bin/eth2stats_run
 Restart=always
+LogLevelMax=crit
 
 [Install]
 WantedBy=multi-user.target
