--- a/ansible/nimbus/files/nimbus.service
+++ b/ansible/nimbus/files/nimbus.service
@@ -6,6 +6,7 @@ ExecStart=/usr/bin/nimbus_run
 User=nimbus
 Group=nimbus
 Restart=always
+LogLevelMax=err
 RuntimeMaxSec=21600
 # RuntimeMaxSec=7200
 
