switch to master branch and build ncli_db

--- a/docker/nimbus/Dockerfile
+++ b/docker/nimbus/Dockerfile
@@ -5,11 +5,11 @@ RUN apt-get update && apt-get install -y \
       git \
       libpcre3-dev
 
-ADD https://api.github.com/repos/status-im/nim-beacon-chain/git/refs/heads/devel version.json
+ADD https://api.github.com/repos/status-im/nim-beacon-chain/git/refs/heads/master version.json
 
 RUN git clone \
       --depth 1 \
-      -b devel \
+      -b master \
       https://github.com/status-im/nim-beacon-chain \
       /nimbus
 
