--- a/ansible/nimbus/playbook.yml
+++ b/ansible/nimbus/playbook.yml
@@ -77,6 +77,7 @@
         - foo
       file:
         path: "{{ nimbus_data_dir }}"
+        mode: "0750"
         state: directory
         owner: "{{ nimbus_user }}"
         group: "{{ nimbus_user }}"
