--- a/config.env.example
+++ b/config.env.example
@@ -2,3 +2,5 @@ export NIMBUS_NODE_NAME=
 export STORAGE_DEVICE_ID=
 export EXTERNAL_IP=
 export WEB3_URL=
+export NIMBUS_RELEASE_URL=
+export NIMBUS_NETWORK=
