--- a/config.env.example
+++ b/config.env.example
@@ -4,3 +4,5 @@ export EXTERNAL_IP=
 export WEB3_URL=
 export NIMBUS_RELEASE_URL=
 export NIMBUS_NETWORK=
+export PROMETHEUS_RELEASE_URL=https://github.com/prometheus/prometheus/releases/download/v2.23.0/prometheus-2.23.0.linux-amd64.tar.gz
+export NODE_EXPORTER_RELEASE_URL=https://github.com/prometheus/node_exporter/releases/download/v1.0.1/node_exporter-1.0.1.linux-amd64.tar.gz
